--- a/package.json
+++ b/package.json
@@ -6,10 +6,17 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "watch:sass": "node-sass style/sass/main.scss style/css/globals.css -w"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@mui/material": "^5.9.0",
+    "lottie-web": "^5.9.6",
     "next": "12.2.2",
+    "next-routes": "^1.4.2",
+    "node-sass": "^7.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
@@ -17,7 +24,7 @@
     "@types/node": "18.0.3",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
-    "eslint": "8.19.0",
+    "eslint": "^8.19.0",
     "eslint-config-next": "12.2.2",
     "typescript": "4.7.4"
   }
